# rgs

./: .dockerignore  .env  .eslintignore  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  README.md  _package.json  _pnpm-lock.yaml  bun.lockb  compose.yaml  dashboard.json  devbox.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dynamic.yml  ecosystem.config.js  go.mod  go.work  go.work.sum  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rgs.code-workspace  tiles.db  tsconfig.json
_tile_downloader/: pyproject.toml
command-dispatcher/: Cargo.toml  README.md
command-dispatcher/src/: cli.rs  commands.rs  dispatcher.rs  health.rs  link.rs  main.rs
coord_mocker/: Cargo.toml  README.md
coord_mocker/src/: main.rs  random_message.rs
gps-ingest/: ARCHITECTURE.md  Cargo.toml  README.md  antenna_service.py  example_pipeline.py  fake_gps_ingest.py  main.py  predictor_service.py  pyproject.toml  remote.py  rocket_gps.jsonl  test_pipe.sh
gps-ingest/src/: main.rs
gps-ingest/tests/: conftest.py  test_continuous_unwrap.py  test_pointing_math.py
heartbeat/: Cargo.toml  README.md  command_queue.go  go.mod  go.sum  main.go  service_ping.go
heartbeat/src/: command_queue.rs  main.rs  service_ping.rs
hydra_command_dispatcher/: Cargo.toml  README.md
hydra_commander/: Cargo.toml
hydra_commander/src/: main.rs
hydra_gateway/: Cargo.toml  README.md  go.mod  main.go  perf.data.old
hydra_gateway/cmd/: list.go  listen.go  root.go
hydra_gateway/src/: main.rs
hydra_manager_daemon/: Cargo.toml
hydra_manager_daemon/src/: main.rs
hydra_pg/: Cargo.toml  Dockerfile  README.md
hydra_pg/.sqlx/: query-0437a1b3f27d2b0b668486b108f12409e06d3e9d1c0377ff1912e86843580946.json  query-0d244db981f2e7e684a69c1d77c8f658ea66cf713123a83c792b6fac273f26fc.json  query-12d4aed7da731fdd988500daa0cad69d68b3057c06410119591b0bc58e2199d5.json  query-1410ea23eb51bc6dbc25fe59059844df25c4730f810e69b8cf848a048d2218ad.json  query-14e5cec09ff392ab3a8726c38f2f2539fff1144b2ce3e16070b2575cea80d41f.json  query-175f226a96a77c3a1f3654366a1e8dc3946d650e80c0ff9a53bf4ff2d0a9ccf6.json  query-2a996503157fbfb3be9a4901d88891f868704dbfb2b6d847adc2e454f010c977.json  query-3459ec8de6967afbf77390a402f21ab050ebe1d8949cfabaed1065693b16515a.json  query-36b44845ee79491bda17bb5b6f21fbed54c1766e885c436d76f54ff22a482d57.json  query-3ef2cb475063e5e2771be502b71e314f963dac987775263c47764408656780c0.json  query-4794e166f650f8869c4cff8ec799917927bc99f14debd4c1319b8f02eed4ce5e.json  query-6699808b1d89b4bd1fa473b9d1a67ef9556d5248ae3a57709c9a5cdf62064f47.json  query-6be64d8941542b80fcc5803c6455f967491d8ac9972511ffe5feb6fdf1c94f35.json  query-73b534cfc731969e9339c82a420aee0bec685060125d95b2c1a9044045a84229.json  query-74b82ae43acc3cbd8959c28853e81cd7f3cee0d2158a61209e7d4cbcf9c82180.json  query-7a451ca1f82624161dcc1c0844f0023dd308321b97c70f2a0d63c15869cbb696.json  query-81ab65c2a4df9eddf0d89dea641ae58589a94a57933975ef703938176bf92dff.json  query-90fd5cadc24844cb50ca7e6d3413bc3a68609a7ea0deb11e6070d8e2109cc23f.json  query-98f8e7d2f2c0a39f60768f70d63d114af4ca93ced4f502e873b28eac430f2f64.json  query-9920e5adcaa081ebc91c67f26ff7c24aa9029a6518785db9ab249241ae926adc.json  query-9bcab34060951f0b02af1da52eba76578432be96651c90cae539389e9c0f91e9.json  query-9fbd829f54bfff63e9342fe8a48db9f3206a9901f43d82e03437e20d9ae22666.json  query-a95908b796ccfe1b3b37a350ef69c6155aa99ee61612346ee709227687c01d5c.json  query-c71de778eac1c8bac5771916587c2c0de7546bbab48a514f5833c13c5becdcb0.json  query-c85a18ebd60703423b33edbe11e2ea2e2427f5314779bd58f982dc085a52752a.json  query-d0a10f399ce9e1a6d1aeae866b0ebb169da0e0107c1ea4c23d66db9615bd6223.json  query-d130a8d68d8382fc874eb9b588b221c3a315fe484215228212692433428d64f0.json
hydra_pg/src/: main.rs
hydra_provider/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml
hydra_provider/.sqlx/: query-04ace0b597474fd8b87231f12bd34bc1a3046e81a83c677f7bf42bbc369b6ea1.json  query-0592362f0cab8d03798f22c9a4315f147dc045573e2ce3aac59840593c516cf1.json  query-0c9b8a10dede6da739fb6905db6f68405fe4838d5f04f61e86f57c9ee0f56b7f.json  query-215500742549b342265d45e23484570424a53321983af6a6d44c6d73338b8bf9.json  query-25e634cfa9050fe14a9ca15940cb8dc6028396369530b716ef4c5a1b5d3acc4c.json  query-2799f3d8d88ac5304ea6ce1277c1c4c270ee2f4f3d37722ee640950c4b75bad9.json  query-31a8a18c07ac6cedf1fb51be91609bb566b379c29961130a89990b6953fa0951.json  query-35ba26a012ffa38583280f8385dc7b6ebadd3e3014f065493d1b93c14490fc15.json  query-3b105ffe675b9be036e0e66467ef90cd50edc7f726b255341859313e67655d06.json  query-438ca942a50eeb62bd5201761dc53b02e5a5fe423f9a8e25fe7120bbe9a27638.json  query-4d1161756549a3984f39713fc20a2e4faaa7bb86fb17b51b9f1d412ca2f5897b.json  query-66526c1b942842e10b2f903a82ea4233bef2f53ac63344ea829e1536ad4ba45d.json  query-6a008ef7be44c024bdb5c1d297ac989357eb728615dcb9fd1fe6791cf8816daa.json  query-769508703a027a73f2bc0f393e88817c5aaafaf4ee5b1f8bba44cdac2cb2040b.json  query-79053d7218175d971a732e2c606bf6852d409f9432641ce21177f71240375d41.json  query-7a240b30af0bbacb93856b09a838bdf537b7878fc7a7cd4690c8a8ee5578ced0.json  query-860b21e9726795d654a046117f6360c79431680f5f4ee753f1dd06043fb9a903.json  query-9323f9ba9042047b644aa1d9593d73b5f81d82ab64e647f40f2708aeb920d23c.json  query-95cd3b1a259fc1569c7d5c85ceb85593f9fddbb3af16b1f5b26e12c22a2b4049.json  (+6 more)
hydra_provider/bindings/: Data.ts  (+8 more)
hydrand/: Cargo.toml  README.md
hydrate/: Cargo.toml  README.md
labjack_provider/: CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  README.md  cmake_install.cmake
sergw/: .gitignore  Cargo.toml  README.md  go.mod  logging.go  main.go  manager.go  ports.go  server.go  state.go
telemetry-ingestor/: Cargo.toml  README.md
tenna/: .env.example  .gitignore  main.py  manual_odrive_control.py  overview.md  package-lock.json  package.json  pyproject.toml  vite.config.js
tile_provider/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  index.go  index.html  index.ts  package.json  tiles.db-shm  tiles.db-wal  tsconfig.json
(+1342 files in other folders)
