[workspace]
members = [
    "sergw",
    "telemetry-ingestor",
    "command-dispatcher",
    "heartbeat",
    "coord_mocker",
    "hydra_manager_daemon",
    "hydrand",
    "utils/virtual-serial",
    "utils/manual-command-dispatcher"
]
resolver = "2"

[workspace.dependencies]
mavlink = { git = "https://github.com/uorocketry/rust-mavlink.git", features = [
    "uorocketry",
    "std",
    "tcp",
    "udp",
    "direct-serial",
    "serde",
], default-features = false }
messages-prost = { git = "https://github.com/uorocketry/messages-prost", features = ['std'], default-features = false }
chrono = { git = "https://github.com/uorocketry/chrono", features = ['serde'] }

clap = { version = "4.5.16", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
postcard = { version = "1.0.2", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsql = "0.9.5"
hostname = "0.4.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
