[tool.poetry]
name = "tile-downloader"
version = "0.1.0"
description = ""
authors = ["Fernando Nogueira <abert036@uottawa.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
