[package]
name = "command-dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
messages-prost = { workspace = true }
mavlink = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
libsql = { workspace = true }
serde_json = { workspace = true }
hostname = { workspace = true }
prost = { version = "0.14", features = ["derive"], default-features = false }
