[package]
name = "coord_mocker"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
messages = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
