[package]
name = "coord_mocker"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
messages-prost = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
prost = { version = "0.14", features = ["derive"], default-features = false }
mavlink = { workspace = true }
