[package]
name = "heartbeat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
libsql = "0.9.5"
tokio = { version = "1", features = ["full"] }
chrono = { workspace = true }
hostname = "0.4.0"
serde_json = { workspace = true }
