[package]
name = "heartbeat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
libsql = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
hostname = { workspace = true }
serde_json = { workspace = true }
