[package]
name = "hydra_command_dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
messages = { workspace = true }
mavlink = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
