[package]
name = "hydra_commander"
version = "0.1.0"
edition = "2021"

[dependencies]
messages = { git = "https://github.com/uorocketry/hydra", branch = "nav", features = ['std'], default-features = false}
mavlink = {git = "https://github.com/uorocketry/rust-mavlink.git", features = ["uorocketry", "std", "tcp", "udp", "direct-serial", "serde"], default-features = false}
log = "0.4.22"
clap = { version = "4.5.16", features = ["derive"] }
tracing = "0.1.40"
postcard = "1.0.2"
tracing-subscriber = "0.3.18"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.5.0"
