[package]
name = "hydra_pg"
version = "0.1.0"
edition = "2021"

[dependencies]
messages = { git = "https://github.com/uorocketry/hydra", branch = "nav", features = ['std'], default-features = false}
mavlink = {git = "https://github.com/uorocketry/rust-mavlink.git", features = ["uorocketry", "std", "tcp", "udp", "direct-serial", "serde"], default-features = false}
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres"] }
clap = { version = "4.5.16", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
postcard = "1.0.8"
