
[package]
name = "hydra_provider"
version = "0.1.0"
edition = "2021"


[profile.dev.package.sqlx-macros]
opt-level = 3

[build-dependencies]
tonic-build = { version = "0.10.2" }

[dependencies]
messages = { git = "https://github.com/uorocketry/hydra", branch = "nav"}
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres"] }
tokio = { version = "1", features = ["full"] }
prost = "0.12"
tonic = { version = "0.10.2" }
tonic-health = { version = "0.10.2" }
serialport = "4.3.0"
postcard = "1.0.2"
serde_json = "1.0.91"
serde = "1.0.152"
derive_more = "0.99.17"
clap = { version = "4.0.29", features = ["derive", "env"] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
log = "0.4.17"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.5"
fugit = "0.3.6"
csv = "1.2.2"
chrono = "0.4.35"
