
[package]
name = "hydra_provider"
version = "0.1.0"
edition = "2021"


[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
messages = { git = "https://github.com/uorocketry/hydra", branch = "nav", features = ['std'], default-features = false}
mavlink = {git = "https://github.com/uorocketry/rust-mavlink.git", features = ["uorocketry", "std", "tcp", "udp", "direct-serial", "serde"], default-features = false}
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres"] }
tokio = { version = "1", features = ["full"] }
postcard = "1.0.2"
serde_json = "1.0.91"
serde = "1.0.152"
derive_more = "0.99.17"
clap = { version = "4.0.29", features = ["derive", "env"] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
chrono = "0.4.35"
