
[package]
name = "hydra_provider"
version = "0.1.0"
edition = "2021"


[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
messages =  { workspace = true }
mavlink =  { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres"] }
tokio = { version = "1", features = ["full"] }
postcard =  { workspace = true }
serde_json =  { workspace = true }
serde =  { workspace = true }
derive_more = "0.99.17"
clap =  { workspace = true }
anyhow = { version = "1.0.68", features = ["backtrace"] }
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
chrono = "0.4.35"
