[package]
name = "hydrand"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
messages = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
libsql = { version = "0.9.5" }
hostname = "0.4.0"
