[package]
name = "hydrand"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
messages-prost = { workspace = true }
rand = { workspace = true }
nix = { version = "0.28", features = ["term"] }
libc = "0.2"


