[package]
name = "sergw"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
messages = { workspace = true }
mavlink = {workspace = true}
postcard = "1"
serialport = "4"
serde_json = "1"
serde = "1"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.bench]
debug = true