[package]
name = "telemetry-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
messages-prost = { workspace = true }
mavlink = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = "0.11"
libsql = { workspace = true }
hostname = { workspace = true }
chrono = { workspace = true }
