[package]
name = "tile_provider"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
warp = "0.3"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = "0.29"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
dashmap = "5.0"
